--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.3.27",
     "@react-navigation/stack": "^7.4.8",
+    "axios": "^1.12.2",
     "expo": "~54.0.9",
     "expo-location": "~19.0.7",
     "expo-status-bar": "~3.0.8",
